# Policy-Mind

./: .gitignore  .replit  MODULES.md  PROJECT.md  README.md  app.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
backend/modules/: __init__.py  ai_service.py  config.py  document_processor.py  embedding_service.py
backend/routes/: __init__.py  document_routes.py  qa_routes.py  upload_routes.py
backend/utils/: __init__.py  validators.py
docs/uml/: 01_use_case_diagram.puml  02_class_diagram.puml  03_sequence_upload.puml  04_sequence_summarize.puml  05_sequence_qa.puml  06_activity_diagram.puml  07_component_diagram.puml  08_deployment_diagram.puml  09_state_diagram.puml  10_package_diagram.puml  11_erd_diagram.puml  README.md
frontend/static/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
